tests/ui/issues/issue-41742.stderr
error[E0308]: mismatched types
  --> $DIR/issue-41742.rs:24:7
   |
LL |     H["?"].f();
   |       ^^^ expected `u32`, found `&str`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
